--- a/memegenerator/src/App.css
+++ b/memegenerator/src/App.css
@@ -40,3 +40,10 @@ body{
   vertical-align: bottom;
    font-size: 24px !important;
 }
+
+.meme--image{
+  max-height: 650px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 1.25rem !important;
+}
